# Search-and-Rescue

ALEX Final/: ReadMe
ALEX Final/Laptop files/: package.xml  teleop_twist_keyboard.py
ALEX Final/Laptop files/scripts/: test.py
ALEX Final/Pi files/: CMakeLists.txt  alexpi.cpp
ALEX Final/Pi files/Arduino/: Alexfinal.ino  Coloursense.ino  HC_SR04.ino  IR_Distance_Sensor.ino  constants.h  packet.h  serialize.cpp
ALEX Final/Pi files/TLS/: alex.crt  alex.csr  alex.key  signing.pem
